--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1>Feed de Posts v1</h1>
+
 <!--header -->
-<router-outlet></router-outlet>
-<!--popular posts feed -->
+<header-custom></header-custom>
+<article>
+    <filter></filter>
+    <router-outlet></router-outlet>
+    <!-- recomendados -->
+</article>
+<popular-feed></popular-feed>
+    <!--popular posts feed -->
