--- a/src/app/main-feed/main.component.html
+++ b/src/app/main-feed/main.component.html
@@ -1,3 +1,1 @@
-<div *ngFor="let post of posts">
-   <post [post]="post"></post>
-</div>
+<post [post]="post" [size]="'grande'" class="contenedorGrande" *ngFor="let post of posts"></post>
