--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -121,7 +121,7 @@ article .filtro ul {
 
 article .filtro li {
 
-	display: block;
+	display: inline-block;
 	float:left;
 	margin-left: 40px;
 	font-size: 1.6em;
@@ -147,29 +147,8 @@ article .feed .contenedorGrande {
 	width: 100%;
 	height: 450px;
 	margin:10px auto;
+	background-color: green;
 }
-
-article .feed .etiquetaGrande {
-	width: 5%;
-	height: 50px;
-	background-color: rgba(0,0,0,0.6);
-	position:absolute;
-	z-index: 5;
-	margin-top:25px;
-	margin-left: 1%;
-	display: block;
-
-}
-
-article .feed .etiquetaGrande a{
-	text-decoration: none;
-	color:white;
-	display: block;
-	margin:12px auto;
-	font-size: 1.3em;
-	text-align: center;
-}
-
 
 article .feed .postGrande {
 	width: 85%;
@@ -177,42 +156,62 @@ article .feed .postGrande {
 	margin: 0 auto;
 	background-color: #009999;
 	overflow: hidden;
-	z-index: 1;
-	position: relative;
 }
 
-article .feed img{
-	width: 105%;
+article  .feed img{
+	width: 101%;
 	overflow: hidden;
 	margin: -2px;
 	padding: 0;
 	vertical-align: middle;
 	min-height: 450px;
+	z-index: -1;
 }
 
 article .feed .postGrande .tituloGrande {
 	width: 85%;
 	margin:0 auto;
-	height: 180px;
+	height: 300px;
 	position: absolute;
-	top:250px;
+	top:130px;
 	left:7.5%;
 	z-index: 2;
-	content-align: center;
+	white-space: pre-wrap;
+	word-break: break-all;
+	hyphens: auto;
+	-webkit-hyphens: manual;
+   -moz-hyphens: manual;
 }
 
-article .feed .postGrande .tituloGrande a{
+article .feed .postGrande .tituloGrande h1{
 	font-size: 300%;
 	text-align: left;
+	line-height: 0.75em;
 	color:white;
-	position: relative;
-	background-color: rgba(0,0,0,0.6);
+	background-color: black;
+
 	display: inline;
-	text-decoration: none;
+	height: 5px;
+	padding: -1em;
+	background-size:80%, 100%;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+	word-break: break-all;
+	margin-top: 55px;
+	hyphens: auto;
+	-webkit-hyphens: manual;
+   -moz-hyphens:manual;
+   -ms-hyphens:manual;
+
 
 }
-
-
+/*article .feed .postGrande .tituloGrande {
+	width: 80%;
+	margin:0 auto;
+	height: 150px;
+	background-color: green;
+	z-index: 2;
+}*/
 
 /*Recomendados */
 aside {
@@ -231,7 +230,7 @@ aside {
 
  /* RESPONSIVE DESKTOP  1224px*/
 
-@media screen and (max-width: 1800px) {
+@media screen and (min-width : 1224px) {
 	body {
 		font-size: 11px;
 	}
